--- a/WPD/Forms/form.css
+++ b/WPD/Forms/form.css
@@ -65,7 +65,7 @@ form#signup select {
 	-o-appearance: none;
 	appearance: none;
 	font-size: .9em;
-	background: #588fd0 url(images/icons_arrows.svg) no-repeat right 8px;
+	background: #588fd0 url(Images/icons_arrows.svg) no-repeat right 8px;
 	background-size: 30px 20px;
 	color: #ffd34c;
 	padding: 7px 45px 7px 10px;
@@ -85,7 +85,7 @@ form#signup input[type="checkbox"] + label, form#signup input[type="radio"] + la
 	display: inline-block;
 	margin-left: -20px;
 	padding: 4px 0px 0px 27px;
-	background: url(images/icons_check_radio.svg) no-repeat;
+	background: url(Images/icons_check_radio.svg) no-repeat;
 	background-size: 20px 80px;
 	line-height: 16px; 
 }
@@ -111,7 +111,7 @@ form#signup input[type="radio"]:checked + label {
 
 form#signup input#email {
     font-size: .9em;
-    background: rgba(255, 255, 255, .8) url(images/icon_email.svg) no-repeat 7px 6px;
+    background: rgba(255, 255, 255, .8) url(Images/icon_email.svg) no-repeat 7px 6px;
     background-size: 30px 17px;
     padding: 5px 0px 6px 47px;
     margin: 0px 0px 12px 0px;
