--- a/WPD/Forms/form.css
+++ b/WPD/Forms/form.css
@@ -7,7 +7,7 @@ body { font-size: 16px; font-family: 'Montserrat', sans-serif; background-color:
 form#signup {
     max-width: 800px;
     padding: 15px;
-    background: #5890d0 url(images/background.jpg) no-repeat 0px -70px;
+    background: #5890d0 url(Images/background.jpg) no-repeat 0px -70px;
 }
 
 form#signup h2 {
